[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
build = "build.rs"
description = "Low-level bindings to V8, the Javascript engine"
documentation = "https://dflemstr.github.io/v8-rs/v8_sys/index.html"
homepage = "https://dflemstr.github.io/v8-rs"
include = ["build.rs", "src/**/*", "Cargo.toml"]
keywords = ["v8", "javascript", "js", "ecmascript", "google"]
license = "Apache-2.0"
name = "v8-sys"
repository = "https://github.com/dflemstr/v8-rs/tree/master/v8-sys"
version = "0.14.7"

[build-dependencies]
bindgen = "0.47.3"
pkg-config = "0.3.14"
cc = "1.0.30"

[build-dependencies.clang]
features = ["runtime"]
version = "0.21.0"

[build-dependencies.clang-sys]
features = ["runtime"]
version = "*"

[build-dependencies.v8-api]
path = "../v8-api"
version = "0.7.0"

[dev-dependencies]
lazy_static = "1.3.0"

[features]
shared = []
